deps/v8/test/message/get-iterator1.out
*%(basename)s:7: TypeError: nonIterable(...) is not iterable
[...nonIterable()];
    ^
TypeError: nonIterable(...) is not iterable
    at *%(basename)s:7:5
